deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gorebackend-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: gorebackend
  ports:
    - name: http
      port: 80
      targetPort: 8080
